# Solis

./: .gitmodules  BUILD.bazel  WORKSPACE.bazel  build.sh  run.sh  todo.txt
scripts/: cleanbuild.sh  cleanrun.sh  shaders.sh
src/: main.cpp
src/Console/: Console.cpp  Console.h
src/Core/: Base.h
src/Renderer/: Renderer.cpp  Renderer.h  RendererUtils.h  Structures.h  Window.cpp  Window.h
src/Utils/: FileUtils.cpp  FileUtils.h
