load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_library(
    name = "Solis",
    deps = [
        "//vendor/glfw",
        "//vendor/glm",
        "@rules_vulkan//vulkan:vulkan_cc_library"
    ]
)

cc_binary(
    name = "Flare",
    srcs = glob(["src/main.cpp"]),
    deps = [
        ":Solis"
    ],
)