cc_library(
    name = "Solis",
    srcs = glob([
        "src/*.cpp",
        "src/**/*.cpp"
    ], exclude = ["src/main.cpp"]),
    hdrs = glob([
        "src/*.h",
        "src/**/*.h"
    ]),
    linkopts = [
        "-lglfw",
        "-lvulkan",
        "-ldl",
        "-lpthread",
        "-lX11",
        "-lXxf86vm",
        "-lXrandr",
        "-lXi",
    ],
    deps = [
        "//vendor:stb_image",
        "//vendor:tiny_obj_loader"
    ]
)

cc_binary(
    name = "Flare",
    srcs = ["src/main.cpp"],
    deps = [
        ":Solis"
    ],
)